Ensure content isn't hidden underneath the header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,6 @@
   text-align: center;
   margin-bottom: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  position: fixed;
   width: 100%;
   z-index: 100;
   top: 0;
